# mock-sso

./: Cargo.toml  build.rs  cert.pem  key.pem  package-lock.json  package.json  webpack.common.js  webpack.dev.js  webpack.prod.js
client/: app.js  app.scss
src/: main.rs  server.rs
static/: script.sql
templates/: index.hbs  saml-redirect.hbs  saml-response.hbs
