[package]
name = "mock-sso"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1"
axum = "0"
axum-extra = { version = "0", features = ["cookie"] }
base64 = "0"
chrono = "0"
clap = { version = "4", features = ["derive"] }
const_format = "0"
cookie = "0"
handlebars = { version = "5", features = ["rust-embed"] }
rust-embed = { version = "8", features = ["mime-guess"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread"] }
tower = "0"
tower-http = { version = "0", features = ["full"] }
url = "2"

[build-dependencies]
static-files = "0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
